tests/error/chooseList-wrong-1st-argument.uplc
(program 0.0.0 [[[(builtin chooseList) (con integer 0)] (con integer 1)] (con integer 2)])